objects/FinServ__IndustriesAppConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FinServ__AccountNameFormat__c</fullName>
        <defaultValue>&quot;{firstname} {lastname}&quot;</defaultValue>
        <description>Define an individual&apos;s account name format</description>
        <inlineHelpText>Los nombres de cuentas se muestran de forma predeterminada: {firstname} {lastname}. Para cambiar el orden, introduzca: {lastname} {firstname}</inlineHelpText>
        <label>Account Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__AppName__c</fullName>
        <description>Reserved for Salesforce internal use</description>
        <label>Application Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__AutoCreateInverseRole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for Salesforce internal use</description>
        <label>Create Inverse (Salesforce only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AutocreateIndividualAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Creates the account part of the Individual when creating a contact</description>
        <label>Individual Account Creation from Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__DefaultIndividualType__c</fullName>
        <defaultValue>&quot;Individual&quot;</defaultValue>
        <description>Reserved for Salesforce internal use</description>
        <label>Default Individual Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__DependentPackageNS__c</fullName>
        <description>Comma-separated list of dependent packages</description>
        <label>Dependent Packages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LeadConversionBatchSize__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Defines the batch size for processing lead conversions when converting multiple Individual leads</description>
        <label>Lead Conversion Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__MultipleRelationshipGroups__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables a contact to be a member or related member of multiple relationship groups.</description>
        <label>Multiple Relationship Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PageLayoutApiVersion__c</fullName>
        <description>Specifies the REST API version when retrieving page layout information</description>
        <inlineHelpText>Por ejemplo: v32.0</inlineHelpText>
        <label>Page Layout Api Version</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__RestrictACRRecordVisibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict Visibility on ACR Records.</description>
        <inlineHelpText>Solo los usuarios con al menos acceso de lectura a la cuenta y contacto en un registro de relación de cuenta-contacto pueden ver el registro en componentes de relación.</inlineHelpText>
        <label>Restrict ACR Record Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__ShowDetailedError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows detailed error messages</description>
        <inlineHelpText>Muestra un mensaje de error detallado cuando alguien realiza una acción sin tener permiso.</inlineHelpText>
        <label>Show Detailed Error Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__SyncIndividualSystemFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Account and Contact system fields are kept in sync when an insert is performed on either entity.</description>
        <inlineHelpText>Sincroniza los campos Cuenta y Contacto cuando se crean los registros en el modelo de objeto individual.</inlineHelpText>
        <label>Sync Individual System Fields</label>
        <type>Checkbox</type>
    </fields>
    <label>Industries Application Config</label>
</CustomObject>